<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sub_menu_login"
        android:title="@string/menu_login" />
    <item
        android:id="@+id/sub_menu_logout"
        android:title="@string/menu_logout" />
    <item
        android:id="@+id/sub_menu_write"
        android:title="@string/menu_write" />
    <item
        android:id="@+id/sub_menu_search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/sub_menu_home"
        android:title="@string/menu_home" />
    <!--<item-->
        <!--android:id="@+id/sub_menu_history"-->
        <!--android:title="@string/menu_history" />-->

</menu>